--- a/index.html
+++ b/index.html
@@ -207,6 +207,21 @@
                             <i class="fas fa-chevron-right arrow arrow_right"></i>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h5 class="txt_cntr">Create compute servers in 55 seconds or less.</h5>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="pallini">
+                                <div class="pallino_blu"></div>
+                                <div class="pallino_bianco"></div>
+                                <div class="pallino_bianco"></div>
+                                <div class="pallino_bianco"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
