--- a/index.html
+++ b/index.html
@@ -251,9 +251,11 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-4 col-xs-12 col-sm-4 col-md-4 green"></div>
-                        <div class="col-lg-4 col-xs-12 col-sm-4 col-md-4 green"></div>
-                        <div class="col-lg-4 col-xs-12 col-sm-4 col-md-4 green"></div>
+                        <div class="col-lg-10 col-lg-offset-1">
+                            <div class="col-lg-4 col-xs-12 col-sm-4 col-md-4 green"></div>
+                            <div class="col-lg-4 col-xs-12 col-sm-4 col-md-4 green"></div>
+                            <div class="col-lg-4 col-xs-12 col-sm-4 col-md-4 green"></div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -432,12 +434,75 @@
             <div class="box_footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4 green"></div>
-                    <div class="col-lg-2 green"></div>
-                    <div class="col-lg-2 green"></div>
-                    <div class="col-lg-2 green"></div>
-                    <div class="col-lg-2 green"></div>
-                    
+                    <div class="col-lg-10 col-lg-offset-1">
+                        <div class="col-lg-4">
+                            <div class="copyright">
+                            <img class="logo" src="img/digitalocean-logo-mark.svg"/>
+                            <h6>© 2020 DigitalOcean, LLC. All rights reserved.</h6> 
+                            <ul class="social">
+                                <li><i class="fab fa-twitter"></i></li>
+                                <li><i class="fab fa-facebook-square"></i></li>
+                                <li><i class="fab fa-instagram"></i></li>
+                                <li><i class="fab fa-youtube"></i></li>
+                                <li><i class="fab fa-linkedin"></i></li>
+                            </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-2 pink">
+                            <ul class="link_utili">
+                                <li class="bold">Company</li>
+                                <li>About</li>
+                                <li>Leadership</li>
+                                <li>Link</li>
+                                <li>Blog</li>
+                                <li>Careers</li>
+                                <li>Partner Network</li>
+                                <li>Referral Program</li>
+                                <li>Events</li>
+                                <li>Press</li>
+                                <li>Legal # Security</li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-2 pink">
+                            <ul class="link_utili">
+                                <li class="bold">Products</li>
+                                <li>Droplets</li>
+                                <li>Spaces</li>
+                                <li>Kubernetes</li>
+                                <li>Load Balancers</li>
+                                <li>Block Storage</li>
+                                <li>Tools # Integrations</li>
+                                <li>One-Click Apps</li>
+                                <li>API</li>
+                                <li>Pricing</li>
+                                <li>Documentation</li>
+                                <li>Release Notes</li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-2 pink">
+                            <ul class="link_utili">
+                                <li class="bold">Community</li>
+                                <li>Tutorials</li>
+                                <li>Meetups</li>
+                                <li>Q#A</li>
+                                <li>Write for Donations</li>
+                                <li>Droplets for Demons</li>
+                                <li>Hatch</li>
+                                <li>Shop Swag</li>
+                                <li>Research Program</li>
+                                <li>Currents Research</li>
+                                <li>Open Source</li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-2 pink">
+                            <ul class="link_utili">
+                                <li class="bold">Support</li>
+                                <li>Contact Support</li>
+                                <li>FAQ</li>
+                                <li>Network Status</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
             </div>
