--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h3 class="txt_cntr wh">Get started now.</h3>
+                            <h3 class="txt_cntr bold wh">Get started now.</h3>
                             <a class="create_acc" href="#">Create your account</a>
                         </div>
                     </div>
@@ -434,8 +434,8 @@
             <div class="box_footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-10 col-lg-offset-1">
-                        <div class="col-lg-4">
+                    <div class="col-lg-10 col-lg-offset-1 col-xs-12 col-sm-12 col-md-12">
+                        <div class="col-lg-4 col-xs-12 col-sm-12 col-md-12">
                             <div class="copyright">
                             <img class="logo" src="img/digitalocean-logo-mark.svg"/>
                             <h6>© 2020 DigitalOcean, LLC. All rights reserved.</h6> 
@@ -448,9 +448,9 @@
                             </ul>
                             </div>
                         </div>
-                        <div class="col-lg-2 pink">
+                        <div class="col-lg-2 col-xs-12 col-sm-6 col-md-6 pink">
                             <ul class="link_utili">
-                                <li class="bold">Company</li>
+                                <li class="bold wh">Company</li>
                                 <li>About</li>
                                 <li>Leadership</li>
                                 <li>Link</li>
@@ -463,9 +463,9 @@
                                 <li>Legal # Security</li>
                             </ul>
                         </div>
-                        <div class="col-lg-2 pink">
+                        <div class="col-lg-2 col-xs-12 col-sm-6 col-md-6 pink">
                             <ul class="link_utili">
-                                <li class="bold">Products</li>
+                                <li class="bold wh">Products</li>
                                 <li>Droplets</li>
                                 <li>Spaces</li>
                                 <li>Kubernetes</li>
@@ -479,9 +479,9 @@
                                 <li>Release Notes</li>
                             </ul>
                         </div>
-                        <div class="col-lg-2 pink">
+                        <div class="col-lg-2 col-xs-12 col-sm-6 col-md-6 pink">
                             <ul class="link_utili">
-                                <li class="bold">Community</li>
+                                <li class="bold wh">Community</li>
                                 <li>Tutorials</li>
                                 <li>Meetups</li>
                                 <li>Q#A</li>
@@ -494,9 +494,9 @@
                                 <li>Open Source</li>
                             </ul>
                         </div>
-                        <div class="col-lg-2 pink">
+                        <div class="col-lg-2 col-xs-12 col-sm-6 col-md-6 pink">
                             <ul class="link_utili">
-                                <li class="bold">Support</li>
+                                <li class="bold wh">Support</li>
                                 <li>Contact Support</li>
                                 <li>FAQ</li>
                                 <li>Network Status</li>
