--- a/index.html
+++ b/index.html
@@ -80,17 +80,19 @@
                         <div class="col-lg-10 col-lg-offset-1 col-xs-12 col-sm-12 col-md-12">
                             
                             <div class="col-lg-8 col-xs-12 col-sm-12 col-md-8 inline_bl">
-                               <h1>The simplest cloud platform for developers and teams</h1> 
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                               <h1 class="bold wh">The simplest cloud platform for developers and teams</h1> 
+                                <p class="wh">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                             </div>
                             <div class="col-lg-4 col-xs-12 col-sm-12 col-md-4">
                                 <div class="account inline_bl">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                    <form>
+                                    <h4 class="txt_cntr bold bl">Deploy your app in seconds.</h4>
+                                    <h4 class="txt_cntr bold light_bl">Get started now.</h4>
+                                    <form class="create_acc_form">
                                         <ul>
                                             <li><input class="input_style" type="text" name="email" placeholder="Email"></li>
                                             <li><input class="input_style" type="text" name="password" placeholder="Password"></li>
                                             <li><button type="submit" name="invio">Create your account</button></li>
+                                            <li><button type="signUpGoogle" name="invioGoogle">Sign up with google</button></li>
                                         </ul>
                                     </form>
                                 </div>
@@ -139,8 +141,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-10 col-lg-offset-1 col-xs-12 col-sm-12 col-md-12">
-                            <h3 class="txt_cntr">Deploy and scale seamlessly</h3>
-                            <h4 class="txt_cntr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
+                            <h3 class="txt_cntr bold bl">Deploy and scale seamlessly</h3>
+                            <h4 class="txt_cntr bl">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
                         </div>
                     </div>
                     <div class="row">
@@ -194,8 +196,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-10 col-lg-offset-1 col-xs-12">
-                            <h3 class="txt_cntr">Designed for developers</h3>
-                            <h4 class="txt_cntr">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</h4>
+                            <h3 class="txt_cntr bold bl">Designed for developers</h3>
+                            <h4 class="txt_cntr bl">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</h4>
                         </div>
                     </div>
                     <div class="row">
@@ -247,7 +249,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h3 class="txt_cntr">The features your business needs</h3>
+                            <h3 class="txt_cntr bold bl">The features your business needs</h3>
                         </div>
                     </div>
                     <div class="row">
@@ -268,7 +270,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h3 class="txt_cntr wh">Service your customers around the world from 12 regions.</h3>
+                            <h3 class="txt_cntr bold wh">Service your customers around the world from 12 regions.</h3>
                         </div>
                     </div>
                     
@@ -363,7 +365,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-10 col-lg-offset-1 col-xs-12">
-                            <h3 class="txt_cntr">Development teams love DigitalOcean</h3>
+                            <h3 class="txt_cntr bold bl">Development teams love DigitalOcean</h3>
                         </div>
                     </div>
                     <div class="row">
