modifica di stile del form iniziale

--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
                                         <ul>
                                             <li><input class="input_style" type="text" name="email" placeholder="Email"></li>
                                             <li><input class="input_style" type="text" name="password" placeholder="Password"></li>
-                                            <li><button type="submit" name="invio">Create your account</button></li>
-                                            <li><button type="signUpGoogle" name="invioGoogle">Sign up with google</button></li>
+                                            <li><button id="registrati" type="submit" name="invio">Create your account</button></li>
+                                            <li><button id="registratiGoogle" class="pos_rel" type="submit" name="invioGoogle"><i class="fab fa-google google_icon"></i>Sign up with google</button></li>
                                         </ul>
                                     </form>
+                                    <h6 class="txt_cntr f_size_8">By signing up you agree to the <a href="#">Terms of Service.</a></h6>
                                 </div>
                             </div>
                         </div>
