--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                     <div class="row">
                         <div class="col-lg-10 col-lg-offset-1 col-xs-12 col-sm-12 col-md-12">
                             <div class="pad_jumbo">
-                            <div class="col-lg-7 col-xs-12 col-sm-12 col-md-7 inline_bl">
-                               <h1 class="bold wh">The simplest cloud<br>platform for<br>developers and teams</h1> 
+                            <div class="col-lg-7 col-xs-12 col-sm-7 col-md-7 inline_bl">
+                               <h1 class="bold wh">The simplest cloud<br>platform for<br>developers &amp; teams</h1> 
                                 <p class="l_height wh">Deploy, manage and scale cloud applications faster and more efficiently on DigitalOcean. We make managing infrastructure easy for teams and businesses. whether you're running one virtual machine or the thousand.</p>
                             </div>
-                            <div class="col-lg-5 col-xs-12 col-sm-12 col-md-5">
+                            <div class="col-lg-5 col-xs-12 col-sm-5 col-md-5">
                                 <div class="account inline_bl">
                                     <h4 class="txt_cntr bold bl">Deploy your app in seconds.</h4>
                                     <h4 class="txt_cntr bold light_bl">Get started now.</h4>
@@ -108,11 +108,11 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-10 col-lg-offset-1 col-xs-12 col-sm-12 col-md-12">
-                            <h4 class="txt_cntr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
+                            <h4 class="txt_cntr bold up_case f_size_12 gr">Innovative businesses trust digitalocean</h4>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-10 col-lg-offset-1"> 
+                        <div class="col-lg-10 col-lg-offset-1 pad_30"> 
                         <div class="col-lg-2 col-xs-6 col-sm-2 col-md-2 red"></div>
                         <div class="col-lg-2 col-xs-6 col-sm-2 col-md-2 red"></div>
                         <div class="col-lg-2 col-xs-6 col-sm-2 col-md-2 red"></div>
@@ -123,7 +123,7 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-12 col-xs-12 col-sm-12 col-md-12">
-                            <a class="txt_cntr" href="#">View customers stories</a>
+                            <h5 class="txt_cntr f_size_12"><a class="light_bl bold dec_none" href="#">View customers stories &gt;</a></h5>
                         </div>
                     </div>
                 </div>
@@ -465,7 +465,7 @@
                                 <li>Referral Program</li>
                                 <li>Events</li>
                                 <li>Press</li>
-                                <li>Legal # Security</li>
+                                <li>Legal &amp; Security</li>
                             </ul>
                         </div>
                         <div class="col-lg-2 col-xs-12 col-sm-6 col-md-6 pink">
@@ -476,7 +476,7 @@
                                 <li>Kubernetes</li>
                                 <li>Load Balancers</li>
                                 <li>Block Storage</li>
-                                <li>Tools # Integrations</li>
+                                <li>Tools &amp; Integrations</li>
                                 <li>One-Click Apps</li>
                                 <li>API</li>
                                 <li>Pricing</li>
@@ -489,7 +489,7 @@
                                 <li class="bold wh">Community</li>
                                 <li>Tutorials</li>
                                 <li>Meetups</li>
-                                <li>Q#A</li>
+                                <li>Q&amp;A</li>
                                 <li>Write for Donations</li>
                                 <li>Droplets for Demons</li>
                                 <li>Hatch</li>
