--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,100&display=swap" rel="stylesheet">
+                <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
                 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" rel="stylesheet">
                 <link rel="stylesheet" type="text/css" href="css/style.css">
                 <link rel="stylesheet" type="text/css" href="css/bootstrap-3.3.7-dist/css/bootstrap.min.css">
@@ -113,12 +113,24 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-10 col-lg-offset-1 pad_30"> 
-                        <div class="col-lg-2 col-xs-6 col-sm-2 col-md-2 red"></div>
-                        <div class="col-lg-2 col-xs-6 col-sm-2 col-md-2 red"></div>
-                        <div class="col-lg-2 col-xs-6 col-sm-2 col-md-2 red"></div>
-                        <div class="col-lg-2 col-xs-6 col-sm-2 col-md-2 red"></div>
-                        <div class="col-lg-2 col-xs-6 col-sm-2 col-md-2 red"></div>
-                        <div class="col-lg-2 col-xs-6 col-sm-2 col-md-2 red"></div>
+                        <div class="col-lg-2 col-xs-6 col-sm-2 col-md-2 red">
+                            <img class="img_partners" src="img/docker.svg"/>    
+                        </div>
+                        <div class="col-lg-2 col-xs-6 col-sm-2 col-md-2 red">
+                            <img class="img_partners" src="img/gitlab.svg"/>    
+                        </div>
+                        <div class="col-lg-2 col-xs-6 col-sm-2 col-md-2 red">
+                            <img class="img_partners" src="img/slack.svg"/>
+                        </div>
+                        <div class="col-lg-2 col-xs-6 col-sm-2 col-md-2 red">
+                            <img class="img_partners" src="img/hashicorp.svg"/>    
+                        </div>
+                        <div class="col-lg-2 col-xs-6 col-sm-2 col-md-2 red">
+                            <img class="img_partners" src="img/wework.svg"/>    
+                        </div>
+                        <div class="col-lg-2 col-xs-6 col-sm-2 col-md-2 red">
+                            <img class="img_partners" src="img/splunklogo.svg"/>    
+                        </div>
                         </div>
                     </div>
                     <div class="row">
@@ -421,7 +433,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <h3 class="txt_cntr bold wh">Get started now.</h3>
-                            <a class="create_acc" href="#">Create your account</a>
+                            <p class="txt_cntr"><a class="create_acc" href="#">Create your account</a></p>
                         </div>
                     </div>
                 </div>
