modifica dei contenuti di testo e stile

--- a/index.html
+++ b/index.html
@@ -156,14 +156,14 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-10 col-lg-offset-1 col-xs-12 col-sm-12 col-md-12">
-                            <h3 class="txt_cntr bold bl">Deploy and scale seamlessly</h3>
-                            <h4 class="txt_cntr bl">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
+                            <h3 class="txt_cntr bold bl pad_top_30">Deploy and scale seamlessly</h3>
+                            <h4 class="txt_cntr sottotitolo pad_bottom_30">Our optimized configuration process saves your team time when running and scaling distributed applications, AI &amp; machine learning workloads, hosted services, client websites, or CI/CD environments.</h4>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2 col-xs-12 col-sm-12 col-md-12">
                             <div class="col-lg-4 col-xs-12 col-sm-4 col-md-4 grey">
-                                <ul class="grey_list">
+                                <ul class="grey_list gr">
                                     <li>Deploy</li>
                                     <li>Manage</li>
                                     <li>Secure</li>
@@ -172,14 +172,14 @@
                                 </ul>
                             </div>
                             <div class="col-lg-4 col-xs-12 col-sm-4 col-md-4 green">
-                                <img class="mini_symbol" src="#" alt="symbol"/>
-                                <h5>Lorem Ipsum</h5>
-                                <h6 class="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6>
+                                <img class="mini_symbol" src="img/mini-loghi/timone.svg" alt="symbol"/>
+                                <h5 class="bold bl">Cluster deployments</h5>
+                                <h6 class="gr">Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</h6>
                             </div>
                             <div class="col-lg-4 col-xs-12 col-sm-4 col-md-4 green">
-                                <img class="mini_symbol" src="#" alt="symbol"/>
-                                <h5>Lorem Ipsum</h5>
-                                <h6 class="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6>
+                                <img class="mini_symbol" src="img/mini-loghi/goccia.svg" alt="symbol"/>
+                                <h5 class="bold bl">Optimized compute types</h5>
+                                <h6 class="gr">Get the compute resources you need with Standard or Optimized Droplets.</h6>
                             </div>
                         </div>
                     </div>
@@ -189,14 +189,14 @@
                             <div class="col-lg-4 col-sm-4 col-md-4 blank"></div>
                             </div>
                             <div class="col-lg-4 col-xs-12 col-sm-4 col-md-4 green">
-                                <img class="mini_symbol" src="#" alt="symbol"/>
-                                <h5>Lorem Ipsum</h5> 
-                                <h6 class="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6>
+                                <img class="mini_symbol" src="img/mini-loghi/files.svg" alt="symbol"/>
+                                <h5 class="bold bl">One-click apps</h5> 
+                                <h6 class="gr">Skip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker, and more.</h6>
                             </div>
                             <div class="col-lg-4 col-xs-12 col-sm-4 col-md-4 green">
-                                <img class="mini_symbol" src="#" alt="symbol"/>
-                                <h5>Lorem Ipsum</h5>
-                                <h6 class="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6>
+                                <img class="mini_symbol" src="img/mini-loghi/globo.svg"  alt="symbol"/>
+                                <h5 class="bold bl">Global availability</h5>
+                                <h6 class="gr">Deploy to any of our data center regions around the world.</h6>
                             </div>
                         </div>
                     </div>
@@ -211,8 +211,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-10 col-lg-offset-1 col-xs-12">
-                            <h3 class="txt_cntr bold bl">Designed for developers</h3>
-                            <h4 class="txt_cntr bl">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</h4>
+                            <h3 class="txt_cntr bold bl pad_bottom_30">Designed for developers</h3>
+                            <h4 class="txt_cntr sottotitolo pad_bottom_30">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</h4>
                         </div>
                     </div>
                     <div class="row">
