--- a/index.html
+++ b/index.html
@@ -313,34 +313,34 @@
                         <div class="col-lg-5 col-lg-offset-1 col-xs-12 col-sm-12 col-md-12">
                             <div class="pad_10 wh f_size_12">
                             <div class="row">
-                                <div class="col-lg-2 bord_wh_1 h_30">AMS2</div>
-                                <div class="col-lg-7 bord_wh_1 h_30">Amsterdam, Netherlands</div> 
-                                <div class="col-lg-3 bord_wh_1 h_30"><a class="aqua dec_none" href="#">Test Speed &gt;</a></div>
+                                <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2 bord_wh_1 h_30">AMS2</div>
+                                <div class="col-lg-7 col-xs-7 col-sm-7 col-md-7 bord_wh_1 h_30">Amsterdam, Netherlands</div> 
+                                <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 bord_wh_1 h_30"><a class="aqua dec_none" href="#">Test Speed &gt;</a></div>
                             </div>
                              <div class="row">
-                                <div class="col-lg-2 bord_wh_2 h_30">AMS2</div>
-                                <div class="col-lg-7 bord_wh_2 h_30">Amsterdam, Netherlands</div> 
-                                <div class="col-lg-3 bord_wh_2 h_30"></div>
+                                <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2 bord_wh_2 h_30">AMS3</div>
+                                <div class="col-lg-7 col-xs-7 col-sm-7 col-md-7 bord_wh_2 h_30">Amsterdam, Netherlands</div> 
+                                <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 bord_wh_2 h_30"><a class="aqua dec_none" href="#">Test Speed &gt;</a></div>
                             </div>
                              <div class="row">
-                                <div class="col-lg-1 bord_wh_3 h_30">BLR1</div>
-                                <div class="col-lg-10 bord_wh_3 h_30">Bangalore, India</div> 
-                                <div class="col-lg-1 bord_wh_3 h_30"></div>
+                                <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2 bord_wh_3 h_30">BLR1</div>
+                                <div class="col-lg-7 col-xs-7 col-sm-7 col-md-7 bord_wh_3 h_30">Bangalore, India</div> 
+                                <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 bord_wh_3 h_30"><a class="aqua dec_none" href="#">Test Speed &gt;</a></div>
                             </div>
                              <div class="row">
-                                <div class="col-lg-1 bord_wh_2 h_30">FRA1</div>
-                                <div class="col-lg-10 bord_wh_2 h_30">Frankfurt, Germany</div> 
-                                <div class="col-lg-1 bord_wh_2 h_30"></div>
+                                <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2 bord_wh_2 h_30">FRA1</div>
+                                <div class="col-lg-7 col-xs-7 col-sm-7 col-md-7 bord_wh_2 h_30">Frankfurt, Germany</div> 
+                                <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 bord_wh_2 h_30"><a class="aqua dec_none" href="#">Test Speed &gt;</a></div>
                             </div>
                              <div class="row">
-                                <div class="col-lg-1 bord_wh_1 h_30">LON1</div>
-                                <div class="col-lg-10 bord_wh_1 h_30">London, UK</div> 
-                                <div class="col-lg-1 bord_wh_1 h_30"></div>
+                                <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2 bord_wh_1 h_30">LON1</div>
+                                <div class="col-lg-7 col-xs-7 col-sm-7 col-md-7 bord_wh_1 h_30">London, UK</div> 
+                                <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 bord_wh_1 h_30"><a class="aqua dec_none" href="#">Test Speed &gt;</a></div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-1 h_30">NYC2</div>
-                                <div class="col-lg-10 h_30">New York, NY</div> 
-                                <div class="col-lg-1 h_30"></div>
+                                <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2 h_30">NYC2</div>
+                                <div class="col-lg-7 col-xs-7 col-sm-7 col-md-7 h_30">New York, NY</div> 
+                                <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 h_30"><a class="aqua dec_none" href="#">Test Speed &gt;</a></div>
                             </div>
                         </div>
                         </div>
@@ -348,36 +348,36 @@
                         
                         <!-- COLONNA DESTRA ----------------------------------->
                         <div class="col-lg-5 col-xs-12 col-sm-12 col-md-12">
-                            <div class="pad_10">
+                            <div class="pad_10 wh f_size_12">
                             <div class="row">
-                                <div class="col-lg-1 bord_wh_1 h_30"></div>
-                                <div class="col-lg-10 bord_wh_1 h_30"></div> 
-                                <div class="col-lg-1 bord_wh_1 h_30"></div>
+                                <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2 bord_wh_1 h_30">AMS2</div>
+                                <div class="col-lg-7 col-xs-7 col-sm-7 col-md-7 bord_wh_1 h_30">Amsterdam, Netherlands</div> 
+                                <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 bord_wh_1 h_30"><a class="aqua dec_none" href="#">Test Speed &gt;</a></div>
                             </div>
                              <div class="row">
-                                <div class="col-lg-1 bord_wh_2 h_30"></div>
-                                <div class="col-lg-10 bord_wh_2 h_30"></div> 
-                                <div class="col-lg-1 bord_wh_2 h_30"></div>
+                                <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2 bord_wh_2 h_30">AMS3</div>
+                                <div class="col-lg-7 col-xs-7 col-sm-7 col-md-7 bord_wh_2 h_30">Amsterdam, Netherlands</div> 
+                                <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 bord_wh_2 h_30"><a class="aqua dec_none" href="#">Test Speed &gt;</a></div>
                             </div>
                              <div class="row">
-                                <div class="col-lg-1 bord_wh_3 h_30"></div>
-                                <div class="col-lg-10 bord_wh_3 h_30"></div> 
-                                <div class="col-lg-1 bord_wh_3 h_30"></div>
+                                <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2 bord_wh_3 h_30">BLR1</div>
+                                <div class="col-lg-7 col-xs-7 col-sm-7 col-md-7 bord_wh_3 h_30">Bangalore, India</div> 
+                                <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 bord_wh_3 h_30"><a class="aqua dec_none" href="#">Test Speed &gt;</a></div>
                             </div>
                              <div class="row">
-                                <div class="col-lg-1 bord_wh_2 h_30"></div>
-                                <div class="col-lg-10 bord_wh_2 h_30"></div> 
-                                <div class="col-lg-1 bord_wh_2 h_30"></div>
+                                <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2 bord_wh_2 h_30">FRA1</div>
+                                <div class="col-lg-7 col-xs-7 col-sm-7 col-md-7 bord_wh_2 h_30">Frankfurt, Germany</div> 
+                                <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 bord_wh_2 h_30"><a class="aqua dec_none" href="#">Test Speed &gt;</a></div>
                             </div>
                              <div class="row">
-                                <div class="col-lg-1 bord_wh_1 h_30"></div>
-                                <div class="col-lg-10 bord_wh_1 h_30"></div> 
-                                <div class="col-lg-1 bord_wh_1 h_30"></div>
+                                <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2 bord_wh_1 h_30">LON1</div>
+                                <div class="col-lg-7 col-xs-7 col-sm-7 col-md-7 bord_wh_1 h_30">London, UK</div> 
+                                <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 bord_wh_1 h_30"><a class="aqua dec_none" href="#">Test Speed &gt;</a></div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-1 h_30"></div>
-                                <div class="col-lg-10 h_30"></div> 
-                                <div class="col-lg-1 h_30"></div>
+                                <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2 h_30">NYC2</div>
+                                <div class="col-lg-7 col-xs-7 col-sm-7 col-md-7 h_30">New York, NY</div> 
+                                <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 h_30"><a class="aqua dec_none" href="#">Test Speed &gt;</a></div>
                             </div>
                             </div>
                         </div>
@@ -448,7 +448,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h3 class="txt_cntr bold wh pad_bottom_30">Get started now.</h3>
+                            <h3 class="txt_cntr bold wh pad_bottom_20">Get started now.</h3>
                             <p class="txt_cntr"><a class="create_acc" href="#">Create your account</a></p>
                         </div>
                     </div>
