modifiche di stile

--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
                             <div class="col-lg-4 col-xs-12 col-sm-4 col-md-4">
                                 <img class="mini_symbol" src="img/mini-loghi/timone.svg" alt="symbol"/>
                                 <h5 class="bold bl">Cluster deployments</h5>
-                                <h6 class="gr">Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</h6>
+                                <p class="gr l_height_22 f_size_14">Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
                             </div>
                             <div class="col-lg-4 col-xs-12 col-sm-4 col-md-4">
                                 <img class="mini_symbol" src="img/mini-loghi/goccia.svg" alt="symbol"/>
                                 <h5 class="bold bl">Optimized compute types</h5>
-                                <h6 class="gr">Get the compute resources you need with Standard or Optimized Droplets.</h6>
+                                <p class="gr l_height_22 f_size_14">Get the compute resources you need with Standard or Optimized Droplets.</p>
                             </div>
                         </div>
                     </div>
@@ -192,12 +192,12 @@
                             <div class="col-lg-4 col-xs-12 col-sm-4 col-md-4">
                                 <img class="mini_symbol" src="img/mini-loghi/files.svg" alt="symbol"/>
                                 <h5 class="bold bl">One-click apps</h5> 
-                                <h6 class="gr">Skip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker, and more.</h6>
+                                <p class="gr l_height_22 f_size_14">Skip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker, and more.</p>
                             </div>
                             <div class="col-lg-4 col-xs-12 col-sm-4 col-md-4">
                                 <img class="mini_symbol" src="img/mini-loghi/globo.svg"  alt="symbol"/>
                                 <h5 class="bold bl">Global availability</h5>
-                                <h6 class="gr">Deploy to any of our data center regions around the world.</h6>
+                                <p class="gr l_height_22 f_size_14">Deploy to any of our data center regions around the world.</p>
                             </div>
                         </div>
                     </div>
