--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
                             <div class="pad_10 wh f_size_12">
                             <div class="row">
                                 <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2 bord_wh_1 h_30">AMS2</div>
-                                <div class="col-lg-7 col-xs-7 col-sm-7 col-md-7 bord_wh_1 h_30">Amsterdam, Netherlands</div> 
-                                <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 bord_wh_1 h_30"><a class="aqua dec_none" href="#">Test Speed &gt;</a></div>
+                                <div class="col-lg-7 col-xs-5 col-sm-7 col-md-7 bord_wh_1 h_30">Amsterdam, Netherlands</div> 
+                                <div class="col-lg-3 col-xs-5 col-sm-3 col-md-3 bord_wh_1 h_30"><div class="fl_right"><a class="aqua dec_none" href="#">Test Speed &gt;</a></div></div>
                             </div>
                              <div class="row">
                                 <div class="col-lg-2 col-xs-2 col-sm-2 col-md-2 bord_wh_2 h_30">AMS3</div>
